# agent-c

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  agent_resouces_main.c  agent_resources.c  agent_resources.h  arena.c  arena.h  base.c  base.h  build-pkgm.sh  build-pkgmanager.sh  build.sh  build_proto.sh  compile_commands.json  configure.c  configure.cpp  dependencies.md  nob  out.txt  pkgm.hpp  pkgm_main.cpp  project.idx  resources.c  resources.h  resources_main.c  run_tests.sh  tags  test_cpu_resources  unity.cc
.gitea/workflows/: main-build.yaml
agent/: agent_core.cc  core.cc
agent_grpc/: agent_grpc.cc
auth/: auth.cc
base/: base.c  base.h  base_arena.c  base_arena.h  base_include.c  base_include.h  base_mem.c  base_mem.h  base_parse  base_parse.c  base_parse.h  base_stack.c  base_stack.h  base_test.c  base_test.h  parse
core/: core.cc
dbus/: dbushandler.cc  dbushandler.h
forge/: dep.h  forge.c  forge.h
grpc/: grpc.cc  grpc_include.h
grpc_server/: server.cc
include/: agent_resources.h
journal/: journald.c  journald.cc  journald.h
libgrpc/: grpc.cc  grpc.h
libnet/: net.c  net.cc  net.h  ports.cc
libpkg/: arch_pac.cc  pacman.cc  pkg.c  pkg.h
libres/: resources.cc  resources.h
libvm/: qc.c
logger/: logger.c
source/: agent_resources.c  agent_resources.h  build.sh  clean.sh  lib.c  lib.h  main.c  main.cpp  types.h
temp/: test_cpu_resources  test_disk_resources  test_resources
tests/: test_arena.cc  test_cpu_resources.cc  test_disk_resources.cc  test_ram_resources.cc  test_resources.cc
(+28 files in other folders)
